--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,15 +16,10 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+/*body {*/
+/*  width: 100%;*/
+/*  margin: 0 auto;*/
+/*}*/
 
 @layer utilities {
   .text-balance {
